fix vertical align on svg

--- a/web/modules/ftml-components/src/components/user-info/_user-info.scss
+++ b/web/modules/ftml-components/src/components/user-info/_user-info.scss
@@ -25,6 +25,7 @@
 .wj-karma svg {
   display: inline-block;
   height: 16px;
+  vertical-align: top;
 }
 
 // Karma level based on data-attribute
